src/objects/Apttus_Approval__AsyncActionInfo__c.object
<CustomObject>
    <description>Hold information of all actions that performed asynchronously.</description>
    <fields>
        <fullName>Apttus_Approval__AsyncActionJobId__c</fullName>
        <description>The id of the async apex job associated with this action</description>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>The id of the async apex job associated with this action</inlineHelpText>
        <label>Async Action Job</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Apttus_Approval__AsyncAction__c</fullName>
        <description>Approval action being performed asynchronously</description>
        <inlineHelpText>Approval action being performed asynchronously</inlineHelpText>
        <label>Async Action</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Submit</fullName>
                </value>
                <value>
                    <fullName>Cancel</fullName>
                </value>
                <value>
                    <fullName>Approve</fullName>
                </value>
                <value>
                    <fullName>Reject</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Apttus_Approval__BusinessObjectId__c</fullName>
        <description>ID of the associated business object</description>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>ID of the associated business object</inlineHelpText>
        <label>Business Object</label>
        <length>25</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Apttus_Approval__BusinessObjectType__c</fullName>
        <description>The business object type</description>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>The business object type</inlineHelpText>
        <label>Business Object Type</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Apttus_Approval__EndTime__c</fullName>
        <description>Async action processing end time</description>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>Async action processing end time</inlineHelpText>
        <label>End Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Apttus_Approval__ErrorMsgInfo__c</fullName>
        <description>Information about the failure</description>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>Information about the failure</inlineHelpText>
        <label>Error Msg Info</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Apttus_Approval__ErrorStackInfo__c</fullName>
        <description>Technical information about the failure. Error call stack and other related information</description>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>Technical information about the failure. Error call stack and other related information</inlineHelpText>
        <label>Error Stack Info</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Apttus_Approval__ObjectName__c</fullName>
        <description>Associate business object name</description>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>Associate business object name</inlineHelpText>
        <label>Object Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Apttus_Approval__StartTime__c</fullName>
        <description>Async action processing start date time</description>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>Async action processing start date time</inlineHelpText>
        <label>Start Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Apttus_Approval__Status__c</fullName>
        <description>Async processing current status from the ApexJob table</description>
        <inlineHelpText>Async processing current status from the ApexJob table</inlineHelpText>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Queued</fullName>
                </value>
                <value>
                    <fullName>Processing</fullName>
                </value>
                <value>
                    <fullName>Completed</fullName>
                </value>
                <value>
                    <fullName>Failed</fullName>
                </value>
                <value>
                    <fullName>Aborted</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Apttus_Approval__SubmitTime__c</fullName>
        <description>Async action submit time</description>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>Async action submit time</inlineHelpText>
        <label>Submit Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Apttus_Approval__Submitter__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>User who performed the action</description>
        <inlineHelpText>User who performed the action</inlineHelpText>
        <label>Submitter</label>
        <referenceTo>User</referenceTo>
        <relationshipName>AsyncActionsInfo</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Async Action Info</label>
    <nameField>
        <displayFormat>ASYNC-{00000}</displayFormat>
        <label>ApprovalAsyncActionRec</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Async Actions Info</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>